--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         }
         .contBox .threeBox img{
             width: 4rem;
-            height: 5rem;
+            /*height: 5rem;*/
         }
         .contBox .threeBox button{
             margin-top: 0.4rem;
